--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i><a>
         </div>
         <div class="section-2">
             <h2>About</h2>
