--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <i class="fas fa-code fa-5x white"></i>
             <h2>Nikhil Kadam👨‍💻</h2>
             <p>Nashik,India🇮🇳</p>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/NickK2305?s=09"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/nikhil-kadam-76b816177"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i><a>
+            <a href="https://instagram.com/n.i.c.k._k_2305?igshid=1bw27hlgg6zz1"><i class="fab fa-instagram"></i><a>
         </div>
         <div class="section-2">
             <h2>About</h2>
