--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>Nikhil Kadam</title>
 </head>
 <body>
+    <div class="header">
     <header>
        <h3 align="center"> Portfolio : Nikhil Kadam </h3>
     </header>
+        </div>
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
